deploy/k8s/apps/crm-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-client
  namespace: myapp
  labels:
    app.kubernetes.io/name: crm-client
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/name: crm-client
  ports:
    - name: http
      port: 8087
      targetPort: http
  type: ClusterIP
